[package]
name = "nodejs-bundler-example"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-rt = { version = "2", optional = true }
actix-web = { version = "3", optional = true }
nodejs-bundler = { path = "../lib" }
tokio = { version = "1", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }

[build-dependencies]
nodejs-bundler-codegen = { path = "../codegen" }

[features]
with_actix = ["actix-web", "actix-rt", "nodejs-bundler/actix"]
with_warp = ["warp", "tokio", "nodejs-bundler/warp"]
