[package]
name = "nodejs-bundler-example"
version = "0.0.0-semantic-release"
edition = "2021"
publish = false

[features]
with_actix = ["actix-rt", "actix-web", "nodejs-bundler/actix"]
with_rocket = ["nodejs-bundler/rocket", "rocket"]
with_rouille = ["nodejs-bundler/rouille", "rouille"]
with_warp = ["nodejs-bundler/warp", "tokio", "warp"]

[dependencies]
actix-rt = { version = "2", optional = true }
actix-web = { version = "4", optional = true }
nodejs-bundler = { path = "../lib" }
rocket = { version = "0.5.0", optional = true }
rouille = { version = "3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
warp = { version = "0.4", optional = true }

[build-dependencies]
nodejs-bundler-codegen = { path = "../codegen" }
