[package]
name = "nodejs-bundler"
version = "3.0.0"
edition = "2021"
publish = false

[features]
actix = ["actix-web"]

[dependencies]
actix-web = { version = "4", optional = true }
phf = "0.11"
rocket = { version = "0.5.0-rc.2", optional = true }
warp = { version = "0.3", optional = true }
zstd = "0.11"
